src/snapshots/lepkefing__generate__tests__about_html.snap
---
source: src/generate.rs
expression: "read_file_content(\"out/about.html\")"
---
<!DOCTYPE html>
<html>
<head>
    <meta charset="utf-8">
    <title>About Test - Andor Polgar's Visual Journal</title>
    <link rel="stylesheet" href="/style-38eadec83dd645fa.css">
</head>
<body>
    <div class="content">
        # AboutThis is a test page content.
    </div>
    <footer>Test Site Footer</footer>
</body>
</html>
