src/snapshots/lepkefing__generate__tests__post_html.snap
---
source: src/generate.rs
expression: "read_file_content(\"out/posts/test-post.html\")"
---
<!DOCTYPE html>
<html>
<head>
    <meta charset="utf-8">
    <title>Test Post - Andor Polgar's Visual Journal</title>
    <link rel="stylesheet" href="/style-38eadec83dd645fa.css">
</head>
<body>
    <div class="content">
        <article>    <h1>Test Post</h1>    # Test PostThis is a test post content.<ul><li>Item 1</li><li>Item 2</li><li>Item 3</li></ul><div class="test-include">
    This is included content for testing.
</div>      <div class="test-include">
    This is included content for testing.
</div> </article> 
    </div>
    <footer>Test Site Footer</footer>
</body>
</html>
