src/snapshots/lepkefing__generate__tests__style_css.snap
---
source: src/generate.rs
expression: "read_file_content(\"out/style-d41d8cd98f00b204e9800998ecf8427e.css\")"
---

